--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
- .gradle/
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
 .idea/
-app/build.gradle
-build.gradle
-build/
-gradle.properties
-gradle/
-gradlew
-gradlew.bat
-local.properties
-settings.gradle
-shopping-list.iml
-.gradle/
-
+.DS_Store
+/build
+/captures
+.externalNativeBuild
