--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
@@ -24,11 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.RegisterActivity" />
-        <activity
-            android:name=".activities.ProductActivity"
-            android:label="@string/title_activity_product"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.AddListActivity"></activity>
+        <activity android:name=".activities.ProductActivity"/>
+        <activity android:name=".activities.AddListActivity"/>
     </application>
 
 </manifest>
