--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.ProductActivity" />
         <activity android:name=".activities.AddListActivity" />
-        <activity android:name=".activities.ItemActivity"></activity>
+        <activity android:name=".activities.ItemActivity" />
+        <activity android:name=".activities.AddItemActivity"></activity>
     </application>
 
 </manifest>
